Pascal/test/cohadar/pascal/errors/not_a_range.pas
program test;
var a: array [real] of integer;

begin
end.